@@ -1,12 +1,11 @@
 package com.doritech.tmsservice.serviceImpl;
 
-import java.util.LinkedHashMap;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -14,248 +13,402 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.mapping.PropertyReferenceException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.transaction.annotation.Transactional;
 
-import com.doritech.tmsservice.config.FileStorageProperties;
+import com.doritech.tmsservice.config.CurrentUser;
 import com.doritech.tmsservice.enums.ContentType;
-import com.doritech.tmsservice.exception.BadRequestException;
-import com.doritech.tmsservice.exception.DatabaseOperationException;
-import com.doritech.tmsservice.exception.ResourceNotFoundException;
 import com.doritech.tmsservice.request.TrainingContentRequest;
-import com.doritech.tmsservice.response.TrainingContentListResponse;
+import com.doritech.tmsservice.response.PageResponse;
 import com.doritech.tmsservice.response.TrainingContentResponse;
-import com.doritech.tmsservice.service.FileStorageService;
 import com.doritech.tmsservice.service.TrainingContentService;
 import com.doritech.tmsservice.tms.entity.ResponseEntity;
+import com.doritech.tmsservice.tms.entity.Training;
 import com.doritech.tmsservice.tms.entity.TrainingContent;
 import com.doritech.tmsservice.tms.repository.TrainingContentRepository;
+import com.doritech.tmsservice.tms.repository.TrainingRepository;
 
 @Service
 public class TrainingContentServiceImpl implements TrainingContentService {
 
-	private static final Logger log = LoggerFactory.getLogger(TrainingContentServiceImpl.class);
-
 	private final TrainingContentRepository trainingContentRepository;
-	private final FileStorageService fileStorageService;
-	private final FileStorageProperties fileStorageProperties;
+	private final TrainingRepository trainingRepository;
 
 	public TrainingContentServiceImpl(TrainingContentRepository trainingContentRepository,
-			FileStorageService fileStorageService, FileStorageProperties fileStorageProperties) {
+			TrainingRepository trainingRepository) {
+
 		this.trainingContentRepository = trainingContentRepository;
-		this.fileStorageService = fileStorageService;
-		this.fileStorageProperties = fileStorageProperties;
+		this.trainingRepository = trainingRepository;
 	}
 
 	@Override
-	public ResponseEntity createTrainingContent(TrainingContentRequest request, MultipartFile file) {
+	public ResponseEntity createTrainingContent(TrainingContentRequest request) {
 
-		log.info("createTrainingContent :: request received for trainingId={}, contentType={}", request.getTrainingId(),
-				request.getContentType());
-
-		TrainingContent content = new TrainingContent();
-		content.setTrainingId(request.getTrainingId());
-
-		ContentType contentType;
 		try {
-			contentType = ContentType.valueOf(request.getContentType());
-		} catch (IllegalArgumentException e) {
-			log.error("createTrainingContent :: invalid contentType={}", request.getContentType());
-			throw new BadRequestException("Invalid content type. Must be one of VIDEO, PDF, DOCUMENT, AUDIO, YOUTUBE");
-		}
-		content.setContentType(contentType);
 
-		// Case 1: content references an EXISTING video/document record (via
-		// content_reference_id)
-		if (request.getContentReferenceId() != null) {
-			content.setContentReferenceId(request.getContentReferenceId());
-			content.setDocumentUrl(null);
-		}
-		// Case 2: YOUTUBE link — direct URL, no file upload needed
-		else if (contentType == ContentType.YOUTUBE) {
-			if (request.getDocumentUrl() == null || request.getDocumentUrl().isBlank()) {
-				log.error("createTrainingContent :: youtube url missing");
-				throw new BadRequestException("Document URL is required for YOUTUBE content type");
+			if (request == null) {
+				return new ResponseEntity("Training content data is required!", HttpStatus.BAD_REQUEST.value(), null);
 			}
-			content.setDocumentUrl(request.getDocumentUrl());
-		}
-		// Case 3: direct file upload (PDF, AUDIO, new DOCUMENT, new VIDEO not yet in
-		// videos/documents table)
-		else {
-			if (file == null || file.isEmpty()) {
-				log.error("createTrainingContent :: file missing for direct upload contentType={}", contentType);
-				throw new BadRequestException("Either a file must be uploaded or a document URL must be provided");
+			if (request.getTrainingId() == null || request.getTrainingId() <= 0) {
+				return new ResponseEntity("Valid training id is required!", HttpStatus.BAD_REQUEST.value(), null);
 			}
-			String storedPath = fileStorageService.storeFile(file, fileStorageProperties.getTrainingContentPath());
-			content.setDocumentUrl(storedPath);
-			content.setFileSizeBytes(file.getSize());
-		}
+			if (request.getContentType() == null || request.getContentType().trim().isEmpty()) {
+				return new ResponseEntity("Content type is required!", HttpStatus.BAD_REQUEST.value(), null);
+			}
+			if (request.getContentReferenceId() == null || request.getContentReferenceId() <= 0) {
+				return new ResponseEntity("Valid content reference id is required!", HttpStatus.BAD_REQUEST.value(),
+						null);
+			}
 
-		content.setDocumentName(request.getDocumentName());
-		content.setDocumentDescription(request.getDocumentDescription());
-		content.setDisplayOrder(request.getDisplayOrder());
-		content.setIsRequired(request.getIsRequired());
+			Long currentUserId = CurrentUser.getUserId();
+			Optional<Training> trainingOptional = trainingRepository.findById(request.getTrainingId());
+			if (trainingOptional.isEmpty()) {
+				return new ResponseEntity("Training not found with id: " + request.getTrainingId(),
+						HttpStatus.NOT_FOUND.value(), null);
+			}
+			Training training = trainingOptional.get();
+			ContentType contentType;
+			try {
+				contentType = ContentType.valueOf(request.getContentType().trim().toUpperCase());
+			} catch (IllegalArgumentException e) {
+				return new ResponseEntity("Invalid content type: " + request.getContentType(),
+						HttpStatus.BAD_REQUEST.value(), null);
+			}
+			boolean alreadyExists = trainingContentRepository
+					.existsByTraining_TrainingIdAndContentTypeAndContentReferenceId(request.getTrainingId(),
+							contentType, request.getContentReferenceId());
 
-		TrainingContent saved;
-		try {
-			saved = trainingContentRepository.save(content);
+			if (alreadyExists) {
+				return new ResponseEntity("Training content already exists for this training!",
+						HttpStatus.CONFLICT.value(), null);
+			}
+
+			TrainingContent trainingContent = new TrainingContent();
+			trainingContent.setTraining(training);
+			trainingContent.setContentType(contentType);
+			trainingContent.setContentReferenceId(request.getContentReferenceId());
+			trainingContent.setRequired(request.getIsRequired() != null ? request.getIsRequired() : false);
+
+			trainingContent.setCreatedBy(currentUserId);
+			trainingContent.setCreatedAt(LocalDateTime.now());
+			TrainingContent savedTrainingContent = trainingContentRepository.save(trainingContent);
+
+			return new ResponseEntity("Training content created successfully!", HttpStatus.CREATED.value(),
+					mapToResponse(savedTrainingContent));
+
+		} catch (DataIntegrityViolationException e) {
+			e.printStackTrace();
+			return new ResponseEntity("Training content already exists or violates database constraints!",
+					HttpStatus.CONFLICT.value(), null);
+
 		} catch (Exception e) {
-			log.error("createTrainingContent :: error while saving - {}", e.getMessage(), e);
-			throw new DatabaseOperationException("Something went wrong while saving training content");
+			e.printStackTrace();
+			return new ResponseEntity("Internal server error!", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
 		}
-
-		log.info("createTrainingContent :: saved successfully with id={}", saved.getTrainingContentId());
-
-		return new ResponseEntity("Training content saved successfully", HttpStatus.CREATED.value(),
-				mapToFullResponse(saved));
 	}
 
 	@Override
+	@Transactional(value = "tmsTransactionManager", readOnly = true)
 	public ResponseEntity getTrainingContentById(Long id) {
 
-		log.info("getTrainingContentById :: request received for id={}", id);
-
-		if (id == null) {
-			log.error("getTrainingContentById :: id is null");
-			throw new BadRequestException("ID can not be null");
-		}
-
-		TrainingContent content = trainingContentRepository.findById(id).orElseThrow(() -> {
-			log.error("getTrainingContentById :: not found for id={}", id);
-			return new ResourceNotFoundException("Training content not found with id: " + id);
-		});
-
-		log.info("getTrainingContentById :: fetched successfully for id={}", id);
-
-		return new ResponseEntity("Fetch Data By Id", HttpStatus.OK.value(), mapToFullResponse(content));
-	}
-
-	@Override
-	public ResponseEntity getAllTrainingContent(int page, int size, String sortBy, String sortDir) {
-
-		log.info("getAllTrainingContent :: request received with page={}, size={}, sortBy={}, sortDir={}", page, size,
-				sortBy, sortDir);
-
-		if (page < 0) {
-			log.error("getAllTrainingContent :: page cannot be negative");
-			throw new BadRequestException("Page number can not be negative");
-		}
-
-		if (size <= 0) {
-			log.error("getAllTrainingContent :: size must be greater than 0");
-			throw new BadRequestException("Page size must be greater than 0");
-		}
-
-		if (size > 100) {
-			log.error("getAllTrainingContent :: size exceeds max limit={}", size);
-			throw new BadRequestException("Page size can not exceed 100");
-		}
-
-		Sort sort = sortDir.equalsIgnoreCase("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
-		Pageable pageable = PageRequest.of(page, size, sort);
-
-		Page<TrainingContent> contentPage;
 		try {
-			contentPage = trainingContentRepository.findAll(pageable);
-		} catch (PropertyReferenceException e) {
-			log.error("getAllTrainingContent :: invalid sort field={}", sortBy);
-			throw new BadRequestException("Invalid sort field: " + sortBy);
+
+			if (id == null || id <= 0) {
+				return new ResponseEntity("Invalid training content id", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			Optional<TrainingContent> optionalTrainingContent = trainingContentRepository.findById(id);
+
+			if (optionalTrainingContent.isEmpty()) {
+				return new ResponseEntity("Training content not found with id: " + id, HttpStatus.NOT_FOUND.value(),
+						null);
+			}
+
+			TrainingContentResponse response = mapToResponse(optionalTrainingContent.get());
+
+			return new ResponseEntity("Training content fetched successfully", HttpStatus.OK.value(), response);
+
 		} catch (Exception e) {
-			log.error("getAllTrainingContent :: error while fetching - {}", e.getMessage(), e);
-			throw new DatabaseOperationException("Something went wrong while fetching training content");
+
+			e.printStackTrace();
+
+			return new ResponseEntity("Internal server error!", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
 		}
-
-		// NOTE: getAll me sirf lightweight fields — document_url/file details nahi
-		// bhejte.
-		// Full detail sirf getTrainingContentById se milega.
-		List<TrainingContentListResponse> responseList = contentPage.getContent().stream().map(this::mapToListResponse)
-				.collect(Collectors.toList());
-
-		Map<String, Object> pageData = new LinkedHashMap<>();
-		pageData.put("content", responseList);
-		pageData.put("pageNumber", contentPage.getNumber());
-		pageData.put("pageSize", contentPage.getSize());
-		pageData.put("totalElements", contentPage.getTotalElements());
-		pageData.put("totalPages", contentPage.getTotalPages());
-		pageData.put("isLast", contentPage.isLast());
-
-		log.info("getAllTrainingContent :: {} of {} training content fetched successfully", responseList.size(),
-				contentPage.getTotalElements());
-
-		return new ResponseEntity("Training content fetch successfully", HttpStatus.OK.value(), pageData);
 	}
 
 	@Override
-	public ResponseEntity getContentByTrainingId(Long trainingId) {
+	@Transactional(value = "tmsTransactionManager", readOnly = true)
+	public ResponseEntity getAllTrainingContent() {
+		try {
+			List<TrainingContent> trainingContents = trainingContentRepository.findAll();
+			if (trainingContents.isEmpty()) {
+				return new ResponseEntity("Training content not found", HttpStatus.NOT_FOUND.value(), null);
+			}
 
-		log.info("getContentByTrainingId :: request received for trainingId={}", trainingId);
+			List<TrainingContentResponse> responseList = trainingContents.stream().map(this::mapToResponse).toList();
+			return new ResponseEntity("Training contents fetched successfully", HttpStatus.OK.value(), responseList);
 
-		if (trainingId == null) {
-			log.error("getContentByTrainingId :: trainingId is null");
-			throw new BadRequestException("Training ID can not be null");
+		} catch (Exception e) {
+			e.printStackTrace();
+			return new ResponseEntity("Internal server error!", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
 		}
+	}
 
-		List<TrainingContent> contentList = trainingContentRepository
-				.findByTrainingIdOrderByDisplayOrderAsc(trainingId);
+	@Override
+	@Transactional(value = "tmsTransactionManager", readOnly = true)
+	public ResponseEntity getTrainingContentByTrainingId(Long trainingId) {
+		try {
+			if (trainingId == null || trainingId <= 0) {
+				return new ResponseEntity("Invalid training id", HttpStatus.BAD_REQUEST.value(), null);
+			}
+			if (!trainingRepository.existsById(trainingId)) {
+				return new ResponseEntity("Training not found with id: " + trainingId, HttpStatus.NOT_FOUND.value(),
+						null);
+			}
 
-		// Ye bhi lightweight rakha hai - training ke andar content list dikhani hai,
-		// poora detail nahi chahiye
-		List<TrainingContentListResponse> responseList = contentList.stream().map(this::mapToListResponse)
-				.collect(Collectors.toList());
+			List<TrainingContent> trainingContents = trainingContentRepository.findByTraining_TrainingId(trainingId);
+			if (trainingContents.isEmpty()) {
+				return new ResponseEntity("No training content found for training id: " + trainingId,
+						HttpStatus.NOT_FOUND.value(), null);
+			}
+			List<TrainingContentResponse> responseList = trainingContents.stream().map(this::mapToResponse).toList();
+			return new ResponseEntity("Training contents fetched successfully", HttpStatus.OK.value(), responseList);
 
-		log.info("getContentByTrainingId :: {} content items fetched for trainingId={}", responseList.size(),
-				trainingId);
+		} catch (Exception e) {
+			e.printStackTrace();
+			return new ResponseEntity("Internal server error!", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
+		}
+	}
 
-		return new ResponseEntity("Training content fetch successfully", HttpStatus.OK.value(), responseList);
+	@Override
+	@Transactional("tmsTransactionManager")
+	public ResponseEntity updateTrainingContent(Long id, TrainingContentRequest request) {
+
+		try {
+
+			if (id == null || id <= 0) {
+
+				return new ResponseEntity("Invalid training content id", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			if (request == null) {
+
+				return new ResponseEntity("Training content data is required", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			if (request.getTrainingId() == null || request.getTrainingId() <= 0) {
+
+				return new ResponseEntity("Invalid training id", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			if (request.getContentType() == null || request.getContentType().trim().isEmpty()) {
+
+				return new ResponseEntity("Content type is required", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			if (request.getContentReferenceId() == null || request.getContentReferenceId() <= 0) {
+
+				return new ResponseEntity("Valid content reference id is required", HttpStatus.BAD_REQUEST.value(),
+						null);
+			}
+
+			Long currentUserId = CurrentUser.getUserId();
+
+			Optional<TrainingContent> optionalTrainingContent = trainingContentRepository.findById(id);
+
+			if (optionalTrainingContent.isEmpty()) {
+
+				return new ResponseEntity("Training content not found with id: " + id, HttpStatus.NOT_FOUND.value(),
+						null);
+			}
+
+			TrainingContent trainingContent = optionalTrainingContent.get();
+
+			Optional<Training> optionalTraining = trainingRepository.findById(request.getTrainingId());
+
+			if (optionalTraining.isEmpty()) {
+
+				return new ResponseEntity("Training not found with id: " + request.getTrainingId(),
+						HttpStatus.NOT_FOUND.value(), null);
+			}
+
+			Training training = optionalTraining.get();
+
+			/*
+			 * Convert String contentType from request into ContentType enum.
+			 *
+			 * Example: "VIDEO" -> ContentType.VIDEO
+			 */
+			ContentType contentType;
+
+			try {
+
+				contentType = ContentType.valueOf(request.getContentType().trim().toUpperCase());
+
+			} catch (IllegalArgumentException e) {
+
+				return new ResponseEntity("Invalid content type: " + request.getContentType(),
+						HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			/*
+			 * Check duplicate training content.
+			 *
+			 * IMPORTANT: Pass ContentType enum here, NOT String.
+			 */
+			boolean alreadyExists = trainingContentRepository
+					.existsByTraining_TrainingIdAndContentTypeAndContentReferenceIdAndTrainingContentIdNot(
+							request.getTrainingId(), contentType, request.getContentReferenceId(), id);
+
+			if (alreadyExists) {
+
+				return new ResponseEntity("Training content already exists for this training",
+						HttpStatus.CONFLICT.value(), null);
+			}
+
+			trainingContent.setTraining(training);
+			trainingContent.setContentType(contentType);
+			trainingContent.setContentReferenceId(request.getContentReferenceId());
+			if (request.getIsRequired() != null) {
+				trainingContent.setRequired(request.getIsRequired());
+			}
+
+			trainingContent.setUpdatedBy(currentUserId);
+			trainingContent.setUpdatedAt(LocalDateTime.now());
+			TrainingContent updatedTrainingContent = trainingContentRepository.save(trainingContent);
+			TrainingContentResponse response = mapToResponse(updatedTrainingContent);
+			return new ResponseEntity("Training content updated successfully", HttpStatus.OK.value(), response);
+
+		} catch (DataIntegrityViolationException e) {
+			e.printStackTrace();
+			return new ResponseEntity("Training content already exists or violates database constraints",
+					HttpStatus.CONFLICT.value(), null);
+
+		} catch (Exception e) {
+			e.printStackTrace();
+			return new ResponseEntity("Internal server error!", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
+		}
 	}
 
 	@Override
 	public ResponseEntity deleteTrainingContent(Long id) {
-
-		log.info("deleteTrainingContent :: request received for id={}", id);
-
-		if (id == null) {
-			log.error("deleteTrainingContent :: id is null");
-			throw new BadRequestException("ID can not be null");
-		}
-
-		TrainingContent content = trainingContentRepository.findById(id).orElseThrow(() -> {
-			log.error("deleteTrainingContent :: not found for id={}", id);
-			return new ResourceNotFoundException("Training content not found with id: " + id);
-		});
-
 		try {
-			trainingContentRepository.delete(content);
+			if (id == null || id <= 0) {
+				return new ResponseEntity("Invalid training content id", HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			Optional<TrainingContent> optionalTrainingContent = trainingContentRepository.findById(id);
+			if (optionalTrainingContent.isEmpty()) {
+				return new ResponseEntity("Training content not found with id: " + id, HttpStatus.NOT_FOUND.value(),
+						null);
+			}
+
+			TrainingContent trainingContent = optionalTrainingContent.get();
+			trainingContentRepository.delete(trainingContent);
+			trainingContentRepository.flush();
+			return new ResponseEntity("Training content deleted successfully", HttpStatus.OK.value(), null);
+		} catch (DataIntegrityViolationException e) {
+			e.printStackTrace();
+			return new ResponseEntity("Training content cannot be deleted because it is linked to other records",
+					HttpStatus.CONFLICT.value(), null);
 		} catch (Exception e) {
-			log.error("deleteTrainingContent :: error while deleting - {}", e.getMessage(), e);
-			throw new DatabaseOperationException("Cannot delete training content, it may be linked to other records");
+			e.printStackTrace();
+			return new ResponseEntity("Something went wrong while deleting training content",
+					HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
 		}
-
-		log.info("deleteTrainingContent :: deleted successfully for id={}", id);
-
-		return new ResponseEntity("Training content deleted successfully", HttpStatus.OK.value(), null);
 	}
 
-	// Full detail mapping — sirf getById / create response ke liye
-	private TrainingContentResponse mapToFullResponse(TrainingContent entity) {
+	private TrainingContent mapToEntity(TrainingContentRequest request, Training training) {
+		TrainingContent trainingContent = new TrainingContent();
+		trainingContent.setTraining(training);
+		trainingContent.setContentType(parseContentType(request.getContentType()));
+		trainingContent.setContentReferenceId(request.getContentReferenceId());
+		if (request.getIsRequired() != null) {
+			trainingContent.setRequired(request.getIsRequired());
+		} else {
+			trainingContent.setRequired(false);
+		}
+		return trainingContent;
+	}
+
+	private TrainingContentResponse mapToResponse(TrainingContent entity) {
 		TrainingContentResponse response = new TrainingContentResponse();
 		response.setTrainingContentId(entity.getTrainingContentId());
-		response.setTrainingId(entity.getTrainingId());
-		response.setContentType(entity.getContentType() != null ? entity.getContentType().name() : null);
+		if (entity.getTraining() != null) {
+			response.setTrainingId(entity.getTraining().getTrainingId());
+			response.setTrainingCode(entity.getTraining().getTrainingCode());
+			response.setTrainingName(entity.getTraining().getTrainingName());
+		}
+
+		response.setContentType(entity.getContentType().name());
 		response.setContentReferenceId(entity.getContentReferenceId());
-		response.setDocumentName(entity.getDocumentName());
-		response.setDocumentDescription(entity.getDocumentDescription());
-		response.setDocumentUrl(entity.getDocumentUrl());
-		response.setFileSizeBytes(entity.getFileSizeBytes());
-		response.setDisplayOrder(entity.getDisplayOrder());
-		response.setIsRequired(entity.getIsRequired());
+		response.setIsRequired(entity.isRequired());
+		response.setCreatedBy(entity.getCreatedBy());
+		response.setUpdatedBy(entity.getUpdatedBy());
 		response.setCreatedAt(entity.getCreatedAt());
+		response.setUpdatedAt(entity.getUpdatedAt());
+
 		return response;
 	}
 
-	// Lightweight mapping — getAll / getByTrainingId ke liye
-	private TrainingContentListResponse mapToListResponse(TrainingContent entity) {
-		return new TrainingContentListResponse(entity.getTrainingContentId(), entity.getTrainingId(),
-				entity.getContentType() != null ? entity.getContentType().name() : null, entity.getDisplayOrder(),
-				entity.getIsRequired());
+	private ContentType parseContentType(String contentType) {
+		try {
+			return ContentType.valueOf(contentType.trim().toUpperCase());
+		} catch (Exception e) {
+			throw new IllegalArgumentException("Invalid content type: " + contentType);
+		}
+	}
+
+	@Override
+	@Transactional(value = "tmsTransactionManager", readOnly = true)
+	public ResponseEntity getAllTrainingContent(int page, int size, String sortBy, String sortDir) {
+		try {
+			if (page < 0) {
+				return new ResponseEntity("Page number cannot be negative", HttpStatus.BAD_REQUEST.value(), null);
+			}
+			if (size <= 0) {
+				return new ResponseEntity("Page size must be greater than 0", HttpStatus.BAD_REQUEST.value(), null);
+			}
+			if (size > 100) {
+				return new ResponseEntity("Page size cannot exceed 100", HttpStatus.BAD_REQUEST.value(), null);
+			}
+			if (sortBy == null || sortBy.trim().isEmpty()) {
+				sortBy = "trainingContentId";
+			}
+			if (sortDir == null || sortDir.trim().isEmpty()) {
+				sortDir = "asc";
+			}
+			if (!sortDir.equalsIgnoreCase("asc") && !sortDir.equalsIgnoreCase("desc")) {
+				return new ResponseEntity("Invalid sort direction. Use 'asc' or 'desc'", HttpStatus.BAD_REQUEST.value(),
+						null);
+			}
+
+			List<String> allowedSortFields = List.of("trainingContentId", "contentType", "contentReferenceId",
+					"isRequired", "createdAt", "updatedAt");
+			if (!allowedSortFields.contains(sortBy)) {
+				return new ResponseEntity("Invalid sort field: " + sortBy, HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			Sort sort = sortDir.equalsIgnoreCase("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
+			Pageable pageable = PageRequest.of(page, size, sort);
+			Page<TrainingContent> trainingContentPage;
+			try {
+				trainingContentPage = trainingContentRepository.findAll(pageable);
+			} catch (PropertyReferenceException e) {
+				return new ResponseEntity("Invalid sort field: " + sortBy, HttpStatus.BAD_REQUEST.value(), null);
+			}
+
+			List<TrainingContentResponse> responseList = trainingContentPage.getContent().stream()
+					.map(this::mapToResponse).collect(Collectors.toList());
+			PageResponse<TrainingContentResponse> pageResponse = new PageResponse<>(responseList,
+					trainingContentPage.getNumber(), trainingContentPage.getSize(),
+					trainingContentPage.getTotalElements(), trainingContentPage.getTotalPages(),
+					trainingContentPage.isLast());
+
+			return new ResponseEntity("Training contents fetched successfully", HttpStatus.OK.value(), pageResponse);
+		} catch (Exception e) {
+			e.printStackTrace();
+			return new ResponseEntity("Something went wrong while fetching training contents",
+					HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
+		}
 	}
 }
